--- a/style.css
+++ b/style.css
@@ -144,3 +144,20 @@ section{
   width: 100%;
   height: 100%;
 }
+
+@media only screen and (max-width: 600px) {
+  .container {
+    flex-direction: column; 
+    align-items: center; 
+    max-width: 90%; 
+  }
+  .tools-board {
+    width: 100%; 
+    max-width: 100%; 
+  }
+  .drawing-board {
+    width: 100%; 
+    max-width: 100%; 
+    overflow-x: auto; 
+  }
+}
